*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.14  [Release on May 27th 2010] [testing: high] [target: moderate]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Item wizard does not add images.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.13  [Release on May 7th 2010] [testing: high] [target: moderate]
 -----------------------------------------------------------------------------------------
 
