*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.16  [Release on June xx 2010] [testing: high] [target: moderate]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Possible errors when saving child items.
+- Lend / borrowed grammar mistakes.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.15  [Release on June 15th 2010] [testing: high] [target: moderate]
 -----------------------------------------------------------------------------------------
 
