--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -44,12 +44,16 @@ New System Requirements:
 - Items are only loaded if and when they are actively shown on screen.
 - Changed the layout of the quick view.
 - Updated Apache FOP to version 1.0; increased performance for report creation.
+- Showing a progress bar when building the tree / grouping panel
 
 [Fixed]
 - Image not shown (or flickering) in the card view
 - ConcurrentModificationException on several occasions
 - Web version is not in synch with item changes done in the client(s)
 - High overall processor usage.
+- Quick filter; sometimes the list is not filled correctly
+- Changing fonts; not properly delegated to all views / components
+- 
 
 
 -----------------------------------------------------------------------------------------
