--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -55,6 +55,8 @@ New System Requirements:
 - Changing fonts; not properly delegated to all views / components
 - File structure not displayed correctly in the File Structure tree.
 - Open report button was enabled even when the report was still being processed.
+- IMDB search; most information was not imported due to site changed
+- IMDB search; multiple directors was not working
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.8.16  [Release on June 19 2010] [testing: high] [target: production]
