--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9 [Release on November xx, 2010] [testing: high] [target: production]
+Data Crow 3.9 beta II [Release on October 29, 2010] [testing: high] [target: beta]
 -----------------------------------------------------------------------------------------
 
 This release delivers a significant, mostly technical, change. The data layer, which 
