--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -56,6 +56,8 @@ New System Requirements:
 - Added an option to enable high quality rendering of images (lowers performance and
   increases memory usage).
 - Improved performance for the chart panel.
+- Using JFreeChart libraries instead of OpenChart2, allowing for better graphical 
+  chart presentations and printable charts.
 
 [Fixed]
 - Image not shown (or flickering) in the card view
