*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9 [Release on November xx, 2010] [testing: high] [target: production]
+Data Crow 3.9 BETA III [Release on November 2, 2010] [testing: high] [target: BETA/TEST]
 -----------------------------------------------------------------------------------------
 This release delivers a significant, mostly technical, change. The data layer, which 
 is the way for Data Crow to load and display items, has been rewritten.
@@ -90,7 +90,8 @@ New System Requirements:
 - Item updates done by external processes no longer cause focus loss on the client
   (File Synchronizer & web application).
 - Removed defective 'brighten' function for pictures.
-  
+- Item Synchronizer does not update all items.
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.8.16  [Release on June 19 2010] [testing: high] [target: production]
