*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9 BETA IV [Release on November 3, 2010] [testing: high] [target: BETA/TEST]
+Data Crow 3.9 BETA V [Release on November 4, 2010] [testing: high] [target: BETA/TEST]
 -----------------------------------------------------------------------------------------
 This release delivers a significant, mostly technical, change. The data layer, which 
 is the way for Data Crow to load and display items, has been rewritten.
@@ -97,6 +97,8 @@ New System Requirements:
   a unique index is set on these tables to prevent this is in the future. 
 - Duplication of records in the picture tables; duplicates are removed here as well
   and a unique index is created here as well.
+- Item is only removed and re-added to the tree if the value has changed of the field
+  that is part of the tree structure (performance gain).
   
 
 -----------------------------------------------------------------------------------------
