--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -25,6 +25,19 @@ Data Crow 3.9.2  [Released on January 6, 2011]  [testing: high]  [target: produc
 [Changed]
 - Associates are now part of a specialized associates module. The create module wizard
   now allows you to select the 'person' module type.
+- You can now configure the maximum number of actors to be retrieved when querying for
+  movies from Imdb.com. Click on the configure button next to the server drop down to 
+  change the value. By default all actors will be retrieved (old/current behavior).
+- Fields can now be selected when exporting items (CSV/XML exports. Field selection is
+  remembered for next time(s).
+- Double-clicking a multiple references field now opens the select windows.
+- Removed labels in quick view for images.
+- Added additional filter operators for dates (today, days ago, days in the future,
+  months ago and years ago.
+
+[Known Issues]
+- Removed the settings for persons (default sort order and display options); these
+  did not work and need to be re-implemented. Planned for next version.
 
 
 -----------------------------------------------------------------------------------------
